--- a/antenne/antenne.tex
+++ b/antenne/antenne.tex
@@ -168,7 +168,7 @@
 		\vspace{0.5cm}
 		\emph{written with love by} \\
 		\vspace{0.5cm}
-		{\Large Andrea Pittaro, Enrico Lovisotto, Umberto Martinelli}
+		{\Large Andrea Pittaro0, Enrico Lovisotto, Umberto Martinelli}
 	\end{center}
 
 	\vfill
