--- a/antenne/antenne.tex
+++ b/antenne/antenne.tex
@@ -175,7 +175,7 @@
 	\begin{center}
 		\line(1, 0){360}
 
-		\textsc{Academic Year 2016/2017}
+		\textsc{Anno Accademico 2016/2017}
 	\end{center}
 \end{titlepage}
 
